crates/xlate/tests/snapshots/golden_matrix__tools_tool_message_without_call__gpt-4o-mini__20260910__chat_to_responses__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "hi"
        }
      ]
    },
    {
      "type": "function_call_output",
      "call_id": "call_does_not_exist",
      "output": "18C"
    }
  ],
  "max_output_tokens": 64
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
